--- a/WordGuess/styles.css
+++ b/WordGuess/styles.css
@@ -23,6 +23,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  align-items: center;
 }
 
 .spinner {
@@ -33,11 +34,23 @@ body {
   color: white
 }
 
-.stats {
-  width: 200px;
-  height: 50px;
+.spinner #textbox {
+  font-size: 24px; 
+  width: 200px; 
+  height: 50px; 
+  border: 1px solid black; 
+  text-align: center; 
+  line-height: 50px;
 }
 
+.spinner #spin_button {
+  margin-left: 80px;
+}  
+
+.stats {
+  width: 150px;
+  height: 50px;
+}
 
 .letters-container {
   height: 100px;
@@ -45,7 +58,6 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-
 }
 
 .letters-container button {
