--- a/WordGuess/styles.css
+++ b/WordGuess/styles.css
@@ -6,11 +6,16 @@ body {
   align-items: center;
   height: 100vh;
   background-color: #f0f0f0;
+  background-image: url("images/image.jpeg");
+  /* background-position: center; /* Center the image */
+  /*background-repeat: no-repeat; /* Do not repeat the image */
+  /*background-size: cover; Resize the background image to cover the entire container */
 }
 
 .grid {
   width: 600px;
   height: 500px;
+  background-color: black;
   border: solid black 1px;
 }
 
@@ -74,12 +79,21 @@ body {
 }
 
 .word-container{
-  width: 100px;
-  height: 40px;
+  width: 600px;
+  height: 140px;
   color: white;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
+}
+
+.word-container div{
+  width: 38px;
+  height: 38px;
+  background-color: black;
+  margin-left: 1.5px;
+
 }
 
 #categories {
