--- a/WordGuess/styles.css
+++ b/WordGuess/styles.css
@@ -88,11 +88,17 @@ body {
   align-items: center;
 }
 
+.game-over-container {
+  width: 200px;
+  color: white;
+}
+
 .word-container div{
-  width: 38px;
-  height: 38px;
+  width: 15px;
+  height: 20px;
   background-color: black;
   margin-left: 1.5px;
+  text-align: center;
 
 }
 
