--- a/WordGuess/styles.css
+++ b/WordGuess/styles.css
@@ -32,6 +32,11 @@ body {
   align-items: center;
 }
 
+#categories {
+  width: 200px;
+  height: 50px;
+ }
+
 .spinner {
   width: 200px;
   height: 50px;
@@ -80,7 +85,7 @@ body {
 
 .word-container{
   width: 600px;
-  height: 140px;
+  height: 80px;
   color: white;
   display: flex;
   flex-wrap: wrap;
@@ -88,9 +93,23 @@ body {
   align-items: center;
 }
 
-.game-over-container {
-  width: 200px;
+.game-status-container {
+  width: 6000px;
   color: white;
+  text-align: center;
+}
+
+.button-container {
+  width: 600;
+}
+
+.button-container #replay_button {
+  width: 75px;
+  height: 25px;
+  border: solid black 1px;
+  border-radius: 15px;
+  cursor: pointer;
+  display: none;
 }
 
 .word-container div{
@@ -99,10 +118,4 @@ body {
   background-color: black;
   margin-left: 1.5px;
   text-align: center;
-
-}
-
-#categories {
-  width: 195px;
-  height: 50px;
 }
